# sparklite

./: .gitignore  README.md  pyproject.toml  rdd.py
src/sparklite/: rdd.py
src/sparklite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_rdd.py  test_rdd_lineage.py  test_rdd_mapped.py  test_rdd_parallelcollection.py
